@@ -1,8 +1,7 @@
 #!/usr/bin/env python
 
-
 #**************************************************************************
-#   Copyright (C) 2009 by Walter Brisken                                  *
+#   Copyright (C) 2009, 2010 by Walter Brisken                            *
 #                                                                         *
 #   This program is free software; you can redistribute it and/or modify  *
 #   it under the terms of the GNU General Public License as published by  *
@@ -33,7 +32,7 @@
 
 
 program = 'checkdir'
-version = '0.2'
+version = '0.3'
 author  = 'Walter Brisken'
 verdate = '20091028'
 
@@ -276,7 +275,11 @@ def checkFile(module, verbose=1):
 		if scan.stopMJD > mjdStop:
 			mjdStop = scan.stopMJD
 
+	if verbose > 3:
+		print "MODULE: " + module
 	for s in range(len(scans)):
+		if verbose > 3:
+			print "Scan %i runs from %s to %s" % (s, mjd2vex(scans[s].startMJD), mjd2vex(scans[s].stopMJD))
 		if scans[s].error != None:
 			errors.append('Scan %d : %s' % (s+1, scans[s].error))
 	
